--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,15 +26,17 @@ services:
       retries: 10
 
   kestra:
-    image: kestra/kestra:latest
-    pull_policy: always
-    user: "root"
-    command: server standalone
+#    image: kestra/kestra:latest
+#    pull_policy: always
+#    user: "root"
+#    command: server standalone
+    build: .
     volumes:
       - kestra-data:/app/storage
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/kestra-wd:/tmp/kestra-wd
     environment:
+      SECRET_GITHUB_ACCESS_TOKEN: ${SECRET_GITHUB_ACCESS_TOKEN}
       KESTRA_CONFIGURATION: |
         datasources:
           postgres:
